[package]
name = "daiskii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.5.2", features = ["cargo"] }
url = "2.5.0"